--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 <div id="header">
-<p id="name">Deep Laxman Sukhwani</p>
-         <a href="mailto:deepsukhwani@gmail.com" target="_blank"><p id="email">deepsukhwani@gmail.com</p></a>
+<p id="name">Kevin Cobin</p>
+         <a href="mailto:deepsukhwani@gmail.com" target="_blank"><p id="email">kcobin.dev@gmail.com</p></a>
      </div>
      <div class="left">
      </div>
      <div class="right">
-            <h3>CV Highlights</h3>
+            <h3>CV Highlightsfs</h3>
             <p>
             <ul>
                 <li>Currently going through CS253 – Web Application Engineering and CS61A – Structure & Interpretation of Computer Programs</li>
