--- a/index.html
+++ b/index.html
@@ -1,155 +1,129 @@
 <html>
- <head>
-<link type="text/css" rel="stylesheet" href="css/style.css"/>
-<title></title> 
+<head>
+    <link type="text/css" rel="stylesheet" href="css/style.css"/>
+    <title>Kevin J. Cobin</title>
 </head>
 <body>
-<div id="header">
-<p id="name">Kevin Cobin</p>
-         <a href="mailto:kcobin.dev@gmail.com" target="_blank"><p id="email">kcobin.dev@gmail.com</p></a>
-     </div>
-     <div class="left">
-     </div>
-     <div class="right">
-            <h3>CV Highlightsfs</h3>
-            <p>
+    <div id="header">
+        <p id="name">Kevin J. Cobin</p>
+        <a href="mailto:kcobin.dev@gmail.com" target="_blank"><p id="email"> kcobin.dev@gmail.com</p></a>
+        <a style="text-decoration: none;" href="https://www.github.com/kcobinDEV/"><p id="gitHub">github.com/kcobinDEV</p></a>
+    </div>
+    <div class="left">
+    </div>
+    <div class="right">
+        <h3>Applicant Highlights</h3>
+        <p>
             <ul>
-                <li>Just Recently finished my studies using "Learning PHP,MySQL, & JavaScript" by Robin Nixon now I have moved onto "Learning Python" by Mark Lutz</li>
-                <li>Learnt basic Python, JavaScript, HTML, CSS, PHP, MySQL  on TeamTreehouse.com and by reading books published by O'Reilly and publications.</li>
+                <li>Recently finished learning and studying "Learning PHP,MySQL, & JavaScript" by Robin Nixon, now I have moved onto "Learning Python" by Mark Lutz</li>
+                <li>Learnt basic Python, JavaScript, HTML, CSS, PHP, MySQL  on TeamTreehouse.com and by reading books published by O'Reilly and other publications as well as online collaboration with fellow students and instructors.</li>
                 <li>An independent, dedicated, efficient person. These attributes are proved through the series of courses I have taken or I am taking as of now independently through online platforms and self studies.</li>
-                <li>Good Communication Skills, Presentation Skills, attitude towards leadership, authorisation and delegation, conflict resolution and negotiation and a very good team worker.</li></ul>
-            </p>
-            <h3>Professional Experience</h3>
-            <h4 id="company-name"></h4>
-            <p id="job-title"><strong></strong></p>
-            <p id="job-responsibilities">Job Responsbilities</p>
-            <p>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li></ul>
-            </p>
-             <h4 id="company-name"></h4>
-             <p id="job-title"><strong></strong></p>
-             <p id="job-responsibilities">Job Responsbilities</p>
-             <p>
-                 <ul>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                 </ul>
-             </p>
-             <h4 id="company-name"></h4>
-             <p id="job-title"><strong></strong></p>
-             <p id="job-responsibilities">Job Responsbilities</p>
-             <p>
-                 <ul>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                 </ul>
-             </p>
-            <h3>Educational Qualifications</h3>
-            <table>
-                <tr id="heading">
-                    <td>Qualification</td>
-                    <td>Board</td>
-                    <td>Percentage / Grades</td>
-                    <td>Year</td>
-                </tr>
-                <tr>
-                    <td>S.S.C</td>
-                    <td>G.S.E.B India</td>
-                    <td>75.57%</td>
-                    <td>2004</td>
-                </tr>
-                <tr>
-                    <td>H.S.C (Science Stream)</td>
-                    <td>G.S.E.B India</td>
-                    <td>72.40%</td>
-                    <td>2006</td>
-                </tr>
-                <tr>
-                    <td>GDCA (Grad. Dipl in Computer Applications)</td>
-                    <td>NIE (National Institute Of Engineering), Mumbai, India</td>
-                    <td>A Grade</td>
-                    <td>2008</td>
-                </tr>
-                <tr>
-                    <td>B.Sc. (Hons) - Applied Accounting</td>
-                    <td>Oxford Brookes University</td>
-                    <td>2:1 – Upper Second Class Honours</td>
-                    <td>2012</td>
-                </tr>
-                <tr>
-                    <td>Chartered Accounting - ACCA</td>
-                    <td>ACCA Glasgow, UK</td>
-                    <td>Passed (1st Attempt)</td>
-                    <td>2013</td>
-                </tr>
-            </table>
-            <h3>Independent Courses</h3>
-            <p>
-            <ul>
-                <li>
-                <span id="course-name">HTML & CSS for Beginners – Web Fundamentals</span> – Codecademy.com</li>
-                <li>
-                <span id="course-name">Python – Fundamentals and Dynamic Programming </span> - Codecademy.com</li>
-                <li>
-                <span id="course-name">JavaScript – Programming Basics, JS Apps and Build Games </span> - Codecademy.com</li>
-                <li>
-                <span id="course-name">CS101: Introduction to Computer Science - Building a Web Crawler</span> - Udacity.com</li>
-                <li>
-                <span id="course-name">CS50x – Introduction to Computer Science I</span> – edX.org & Harvard University</li>
-                <li>
-                <span id="course-name">Calculus One</span> - Ohio State University & Coursera.org</li>
-                <li>
-                <span id="course-name">Introduction to Finance</span> - Coursera.org & University of Michigan</li>
+                <li>Good Communication Skills, Presentation Skills, attitude towards leadership, authorisation and delegation, conflict resolution and negotiation and a very good team worker.</li>
             </ul>
-            <h3>Technical Skills</h3>
-            <p>
+        </p>
+        <h3>Professional Experience</h3>
+        <h4 id="company-name">Nextiva</h4>
+        <p id="job-title"><strong>Enterprise Tech Support Representative</strong></p>
+        <p id="job-responsibilities">Job Responsbilities</p>
+        <p>
+            <ul>
+                <li>Provide technical assistance to customers for their VOIP(voice over IP) Telephone system. </li>
+                <li>Main responsibility is to quickly diagnose and solve issues having to do with their system and/or network. </li>
+                <li>Typical examples of requests: equipment not working correctly, incorrect configuration, optimizing networks(SOHO & large companies), walking non-technical as well as technical customers through their system. </li>
+                <li>Also responsible for documenting all interactions thoroughly and in a timely manner. </li>
+            </ul>
+        </p>
+        <h4 id="company-name">Asurion</h4>
+        <p id="job-title"><strong>Premier Support Solutions Technical Lead</strong></p>
+        <p id="job-responsibilities">Job Responsbilities</p>
+        <p>
+            <ul>
+                <li>Coached and developed 2 teams of Premier Support Solutions Technicians, totaling 25 people. </li>
+                <li>Implemented best practices which provided us with predictability in metrics as well as adaptability to identify and correct present concerns and call drivers. </li>
+                <li>Through coaching, development, and working closely with supervisors, I was able to assist my teams from being ranked 35th over all to 9th with team A; and from 25th place to 15th place with team B. </li>
+                <li>Created coaching plans and material for agents as I developed my team technically. The documents I produced were to strengthen troubleshooting basics and techniques as well as troubleshooting Androids, iPhones, Blackberrys, and Windows Phones specifically.</li>
+            </ul>
+        </p>
+        <h4 id="company-name">Sprint</h4>
+        <p id="job-title"><strong>Cellphone Repair Technician & System Administrator</strong></p>
+        <p id="job-responsibilities">Job Responsbilities</p>
+        <p>
+            <ul>
+                <li>Managed and performed maintenance on PCs, computers, printers, and the internal LAN. I repaired cellphones and was promoted to Cellphone Technical Lead. </li>
+                <li>In charge of training, keeping the repair center neat, clean, and profitable.</li>
+                <li>I was able to improve the profitability of the repair center from $1.8k a month in service fees to $3.6k by implementing best practices, stream lining the repair process, documenting, and enforcing policy and procedures. </li>
+            </ul>
+        </p>
+        <h3>Educational Qualifications</h3>
+        <table>
+            <tr id="heading">
+                <td>Qualification</td>
+                <td>Graduated</td>
+            </tr>
+            <tr>
+                <td>Horizon High School</td>
+                <td>2008</td>
+            </tr>
+            <tr>
+                <td>S.C.C</td>
+                <td>Still attending</td>
+            </tr>
+            <tr>
+                <td>CompTIA A+</td>
+                <td>2014</td>
+            </tr>
+        </table>
+        <h3>Independent Courses</h3>
+        <p>
             <ul>
                 <li>
-                <span id="course-name">Operating Systems:</span> DOS, Windows 98, Windows 2000, Windows XP, Windows NT, Windows Server 2003, Windows Vista, Windows 7, Macintosh Computers (OS X), Linux (Ubuntu, Fedora)</li>
+                <span id="course-name">HTML & CSS for Beginners - Web Fundamentals</span> - Codecademy.com</li>
                 <li>
-                <span id="course-name">Application Software:</span> Office 97-2003; Office XP, Office 2007, Office for Mac 2011, iWork ’09, Sage Accounting Software, Sage 50 (Accounting Software), Excel 2003/2007 for Financial Modelling spreadsheets.</li>
+                <span id="course-name">Learning Python</span> - TeamTreeHouse.com</li>
                 <li>
-                <span id="course-name">Programming Skills:</span>HTML, CSS, Python, JavaScript, learning C and C++</li></ul>
-            </p>
-            <h3>Certifications / Awards:</h3>
-            <p>
-            <ul>
-                <li>Scored highest in ACCA P1 – Governance, Risk & Ethics exam – June 2012 session amongst full time international students at Kaplan Financial, London.</li>
-                <li>Interviewed by ACCA for “international ACCA student in UK”, interview published in January 2012 edition of ACCA Student Accountant Magazine.</li>
-                <li>Interviewed by ACCA for “international ACCA student in UK”, interview published in January 2012 edition of ACCA Student Accountant Magazine.</li></ul>
-            </p>
-            <h3>Personal Information:</h3>
-            <p>
-            <ul>
+                <span id="course-name">Front End Web Develoment</span> - TeamTreeHouse.com</li>
                 <li>
-                A young, determined hard and smart working person. I believe in task based roles and complete ownership of work.
-                <li>
-                <span id="course-name">Languages Known:</span>English, Hindi, Gujarati and Sindhi</li>
-                <li>
-                <span id="course-name">Hobbies:</span>I love reading Finance and IT related books / magazines, playing Chess, swimming, listening music, surfing Internet, self-learning through e-courses.</li> </ul>
-            </p>
-            <h3>Other Information</h3>
-            <p>
-            <ul>
-                <li>
-                <span id="course-name">Expected Salary:</span>As per company standards</li>
-                <li>
-                <span id="course-name">Area of Interest:</span>Software Development, Programming, Start-ups, Coding, App Development, Technical Support, Support Engineer, Customer Happiness, Client service, Investment Banking, Corporate Finance, Hedge Funds, Mergers & Acquisitions, Analyst, Equity Research, Business Analysis</li>
-                <li>
-                <span id="course-name">Joining Date:</span>Immediate</li></ul>
-            </p>
-            <h3>Declaration</h3>
-            <p>
-            I hereby declare that the details furnished above are true and correct to the best of my knowledge and belief.</p>
-     </div>
-     <div id="footer"></div>
-    </body>
+               <span id="course-name">PHP Development</span> - TeamTreeHouse.com</li>
+               <li>
+               <span id="course-name">Full Stack JavaScript</span> - TeamTreeHouse.com</li>
+               <li>
+               <span id="course-name">"Learning PHP, MySQL, & JavaScript"</span> - by Robin Nixon & O 'Reilly Media, Inc</li>
+               <li>
+               <span id="course-name">"Learning Phython"</span> - by Mark Lutz & O 'Reilly Media, Inc</li>
+           </ul>
+       </p>
+       <h3>Technical Skills</h3>
+       <p>
+           <ul>
+               <li>
+               <span id="course-name">Operating Systems:</span> Windows XP, Windows NT, Windows Server 2003, Windows Vista, Windows 7, Macintosh Computers (OS X), Linux (Ubuntu, Fedora)</li>
+               <li>
+              <span id="course-name">Application Software:</span> Office 97-2003; Office XP, Office 2007, Office for Mac 2011, iWork ’09, Visual Studio, Sublime Text, SmartGit, Apache2(XAMP)</li>
+               <li>
+               <span id="course-name">Programming Skills:</span>HTML, CSS, JavaScript, PHP, learning Python</li>
+           </ul>
+       </p>
+       <h3>Personal Information:</h3>
+       <p>
+           <ul>
+               <li>
+               I am a young, curious, and hard working person. I believe that where there is a will and collaboration with colleagues, anything is possible.
+               <li>
+               <span id="course-name">Hobbies:</span>I love reading history, IT publications, and the classics in fiction / playing music, hiking, playing with my dog, learning/studying , surfing Internet, and spending time with friends and family.</li>
+           </ul>
+       </p>
+       <h3>Other Information</h3>
+       <p>
+           <ul>
+               <li>
+               <span id="course-name">Expected Salary:</span>As per company standards</li>
+               <li>
+               <span id="course-name">Area of Interest:</span>Software Development, Programming, Start-ups, Coding, App Development, Technical Support, Support Engineer, Customer Happiness, Client service, Analyst, Business Analysis</li>
+               <li>
+               <span id="course-name">Joining Date:</span>Immediate</li>
+           </ul>
+       </p>
+    </div>
+  <div id="footer"></div>
+</body>
 </html>
