--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h3>Applicant Highlights</h3>
         <p>
             <ul>
-                <li>Recently finished learning and studying "Learning PHP,MySQL, & JavaScript" by Robin Nixon, now I have moved onto "Learning Python" by Mark Lutz</li>
+                <li>Recently finished learning and studying "Learning PHP,MySQL, and JavaScript" by Robin Nixon, now I have moved onto "Learning Python" by Mark Lutz</li>
                 <li>Learnt basic Python, JavaScript, HTML, CSS, PHP, MySQL  on TeamTreehouse.com and by reading books published by O'Reilly and other publications as well as online collaboration with fellow students and instructors.</li>
                 <li>An independent, dedicated, efficient person. These attributes are proved through the series of courses I have taken or I am taking as of now independently through online platforms and self studies.</li>
                 <li>Good Communication Skills, Presentation Skills, attitude towards leadership, authorisation and delegation, conflict resolution and negotiation and a very good team worker.</li>
